# target-iceberg

./: LICENSE  README.md  meltano.yml  pyproject.toml
data-source/: dummydata.csv
metastore_db/: db.lck  service.properties
metastore_db/log/: logmirror.ctrl
scripts/: iceberg_script.py  pysparkd.py  spark.py  spark_arceadata.py  sparked.py
target_iceberg/: __init__.py  sinks.py  target.py
target_icebergdb/: __init__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
