[tool.poetry]
name = "target-icebergdb"
version = "0.0.1"
description = "`target-icebergdb` is a Singer target for icebergdb, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "icebergdb",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.33.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
pyspark = "3.5.0"
pandas = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
singer-sdk = { version="~=0.33.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.ruff]
src = ["target_icebergdb"]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_icebergdb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-icebergdb = 'target_icebergdb.target:Targeticebergdb.cli'
